--- a/Cour PHYS-F-450 -- Notebook 0 - Introduction.ipynb
+++ b/Cour PHYS-F-450 -- Notebook 0 - Introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cours ULB PHYS-F-450 (2025): Partie 0 - Introduction à Python et qgs\n"
+    "# Cours ULB PHYS-F-450 (2025): Notebook 0 - Introduction à Python et qgs\n"
    ]
   },
   {
@@ -18,8 +18,7 @@
     "1. **Comment installer le framework [qgs](https://github.com/Climdyn/qgs) pour la modélisation climatique et météorologique d'ordre réduit**\n",
     "2. **Comment exécuter le modèle**\n",
     "3. Comment calculer le plus grand exposant de Lyapunov d'un modèle, et le lien avec sa prévisibilité\n",
-    "4. Comment calculer le spectre complet des exposants de Lyapunov\n",
-    "5. Comment calculer les propriétés de corrélation du modèle dynamique sous-jacent"
+    "4. Comment calculer le spectre complet des exposants de Lyapunov"
    ]
   },
   {
@@ -40,7 +39,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour installer qgs et ces exercices, vous devez d'abord installer [Anaconda](https://www.anaconda.com/) sur votre ordinateur portable. Ensuite, clonez le dépôt qgs et suivez les [instructions d'installation](https://github.com/Climdyn/qgs#installation). Vous pouvez ensuite copier les notebooks du tutoriel dans le **répertoire racine** de qgs et le tour est joué !"
+    "Si vous n'avez pas encore [installer qgs](https://github.com/jodemaey/cours-ULB-2025/tree/main#installation-requise), vous pouvez le faire directement dans ce notebook, en décommentant la ligne ci-dessous et en la lançant:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install qgs"
    ]
   },
   {
@@ -182,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons maintenant configurer certains paramètres avec la méthode [`set_params`](https://qgs.readthedocs.io/en/latest/files/technical/configuration.html#qgs.params.params.Params.set_params) de l'objet paramètres :"
+    "Nous pouvons maintenant configurer certains paramètres avec la méthode [`set_params`](https://qgs.readthedocs.io/en/latest/files/technical/configuration.html#qgs.params.params.Params.set_params) de l'objet [`QgParams`](https://qgs.readthedocs.io/en/latest/files/technical/configuration.html#qgs.params.params.QgParams) :"
    ]
   },
   {
@@ -231,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "et indiquons l'amplitude du gradient de température méridionale qui \"force\" le modèle :"
+    "et indiquons l'amplitude du gradient de la température méridionale d'équilibre qui \"force\" le modèle :"
    ]
   },
   {
@@ -270,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous sommes maintenant prêts à fournir l'objet de paramètres à qgs pour obtenir les tendances $\\boldsymbol{f}$ qui nous permettront d'intégrer l'équation différentielle $\\dot{\\boldsymbol{x}} = \\boldsymbol{f}(\\boldsymbol{x})$."
+    "Nous sommes maintenant prêts à fournir l'objet contenant les paramètres à qgs pour obtenir les tendances $\\boldsymbol{f}$ qui nous permettront d'intégrer l'équation différentielle $\\dot{\\boldsymbol{x}} = \\boldsymbol{f}(\\boldsymbol{x})$."
    ]
   },
   {
@@ -287,6 +295,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Deux objets sont en réalité retournés, les tendances $\\boldsymbol{f}$ mais aussi le son Jacobien $\\boldsymbol{Df}$, qui sera utile plus tard pour calculer les exposants de Lyapunov."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Integration temporelle (trajectoires du modèle)"
    ]
   },
@@ -294,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous pouvons maintenant intégrer notre modèle à l'aide d'un intégrateur, un algorithme qui nous fournira la solution de l'équation différentielle ci-dessus. Il existe de nombreuses options pour ce faire (voir plus bas), mais nous utiliserons ici l'intégrateur intégré à qgs (un intégrateur de [Runge-Kutta d'ordre 4](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods)) :"
+    "Nous pouvons maintenant intégrer notre modèle à l'aide d'un intégrateur, un algorithme qui nous fournira la solution de l'équation différentielle ci-dessus. Il existe de nombreuses options pour ce faire (voir plus bas), mais nous utiliserons ici l'intégrateur [`RungeKuttaIntegrator`](https://qgs.readthedocs.io/en/latest/files/technical/integrators.html#qgs.integrators.integrator.RungeKuttaIntegrator) intégré à qgs (un intégrateur de [Runge-Kutta d'ordre 4](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods)) :"
    ]
   },
   {
@@ -345,6 +360,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(voir les options et arguments de la fonction [`integrate`](https://qgs.readthedocs.io/en/latest/files/technical/integrators.html#qgs.integrators.integrator.RungeKuttaIntegrator.integrate) de l'intégrateur, qui lui demande ici d'effectuer l'intégration temporelle)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Il n'est pas inintéressant de tracer l'évolution temporelle cette première trajectoire transitoire, par exemple celle de la première variable: "
    ]
   },
@@ -367,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "et l'on voit qu'en fait le modèle converge assez rapidement vers son attracteur. Noter aussi qu'on a convertit les unités temporelles du modèle en jours via un facteur de conversion. On peut donc utiliser le dernier point de la trajectoire comme condition initiale pour obtenir une trajectoire entièrement sur celui-ci:"
+    "et l'on voit qu'en fait le modèle converge assez rapidement vers son attracteur, dû au caractère *dissipatif* du modèle. Noter aussi qu'on a convertit les unités temporelles du modèle en jours via un facteur de conversion. On peut donc utiliser le dernier point de la trajectoire comme condition initiale pour obtenir une trajectoire entièrement sur celui-ci:"
    ]
   },
   {
@@ -496,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le calcul et la représentation graphique des champs du modèle peuvent être effectués à l'aide d'objets Python appelés diagnostics, qui prennent la sortie de l'intégration du modèle (c'est-à-dire les coefficients spectraux) et la convertissent en champs spatiaux. Une liste des diagnostics actuellement disponibles est incluse dans cette section du [Guide d'utilisation des diagnostics](https://qgs.readthedocs.io/en/latest/files/user_guide.html#analyzing-the-model-s-output-with-diagnostics)."
+    "Le calcul et la représentation graphique des champs du modèle peuvent être effectués à l'aide d'objets Python appelés diagnostics (et décrits [ici](https://qgs.readthedocs.io/en/latest/files/technical/diagnostics.html)), qui prennent la sortie de l'intégration du modèle (c'est-à-dire les coefficients spectraux) et la convertissent en champs spatiaux. Une liste des diagnostics actuellement disponibles est incluse dans cette [section](https://qgs.readthedocs.io/en/latest/files/user_guide.html#analyzing-the-model-s-output-with-diagnostics) du guide de l'utilisateur."
    ]
   },
   {
@@ -603,9 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "psi.plot(100)"
@@ -658,15 +678,13 @@
    "source": [
     "### (Gadget) Affichage des champs résultants sous forme d'animation\n",
     "\n",
-    "Grâce aux diagnostics, il est également possible de visualiser l'évolution temporelle des champs du modèle. Nous présentons ici simultanément un nuage de points des variables $\\psi_{{\\rm a}, 2}$ et $\\psi_{{\\rm a}, 3}$, ainsi que le champ de hauteur géopotentielle à 500 hPa en fonction de l'altitude orographique. Pour plus de détails sur les diagnostics et leur utilisation pour produire ce type d'animation, veuillez consulter cette section du [Guide de l'utilisateur](https://qgs.readthedocs.io/en/latest/files/user_guide.html#analyzing-the-model-s-output-with-diagnostics)."
+    "Grâce aux diagnostics, il est également possible de visualiser l'évolution temporelle des champs du modèle. Nous présentons ici simultanément un nuage de points des variables $\\psi_{{\\rm a}, 2}$ et $\\psi_{{\\rm a}, 3}$, ainsi que le champ de hauteur géopotentielle à 500 hPa en fonction de l'altitude orographique. Pour plus de détails sur les diagnostics et leur utilisation pour produire ce type d'animation, veuillez consulter cette [section](https://qgs.readthedocs.io/en/latest/files/user_guide.html#analyzing-the-model-s-output-with-diagnostics) du guide de l'utilisateur."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "psi = MiddleAtmosphericStreamfunctionDiagnostic(model_parameters, geopotential=True)\n",
@@ -701,9 +719,16 @@
     "A faire par exemple en continuant ce notebook:\n",
     "\n",
     "* Un premier exercice simple pour cette introduction est de redémarrer ce notebook en changeant des paramètres pour observer l'effet obtenu. Une description complète de tous les paramètres disponibles est fournie [ici](https://qgs.readthedocs.io/en/latest/files/technical/configuration.html).\n",
-    "* Intégrer les équations différentielles du modèle avec d'autres méthodes (par exemple la [méthode d'Euler](https://en.wikipedia.org/wiki/Euler_method) ou la [méthode de Heun](https://en.wikipedia.org/wiki/Heun's_method)), en les codant à la main, et comparer les résultats.\n",
+    "* Intégrer les équations différentielles du modèle avec d'autres méthodes (par exemple la [méthode d'Euler](https://en.wikipedia.org/wiki/Euler_method) ou la [méthode de Heun](https://en.wikipedia.org/wiki/Heun's_method)), en les codant à la main à l'aide de la fonction `f` ($\\boldsymbol{f}$) donnant les tendances du modèle, et comparer les résultats.\n",
     "* Changer le nombre de mode dans le modèle (voir l'entrée [6] du notebook) pour obtenir le [modèle de Charney & Strauss](https://journals.ametsoc.org/view/journals/atsc/37/6/1520-0469_1980_037_1157_fdimea_2_0_co_2.xml) vu au cours, et comparer la dynamique obtenue avec le modèle présenté ici.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -722,9 +747,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
