Clarify task for integrating differential equations
Updated a task description to specify comparing trajectories for the same initial condition.

--- a/Cour PHYS-F-450 -- Notebook 0 - Introduction.ipynb
+++ b/Cour PHYS-F-450 -- Notebook 0 - Introduction.ipynb
@@ -719,7 +719,7 @@
     "A faire par exemple en continuant ce notebook:\n",
     "\n",
     "* Un premier exercice simple pour cette introduction est de redémarrer ce notebook en changeant des paramètres pour observer l'effet obtenu. Une description complète de tous les paramètres disponibles est fournie [ici](https://qgs.readthedocs.io/en/latest/files/technical/configuration.html).\n",
-    "* Intégrer les équations différentielles du modèle avec d'autres méthodes (par exemple la [méthode d'Euler](https://en.wikipedia.org/wiki/Euler_method) ou la [méthode de Heun](https://en.wikipedia.org/wiki/Heun's_method)), en les codant à la main à l'aide de la fonction `f` ($\\boldsymbol{f}$) donnant les tendances du modèle, et comparer les résultats.\n",
+    "* Intégrer les équations différentielles du modèle avec d'autres méthodes (par exemple la [méthode d'Euler](https://en.wikipedia.org/wiki/Euler_method) ou la [méthode de Heun](https://en.wikipedia.org/wiki/Heun's_method)), en les codant à la main à l'aide de la fonction `f` ($\\boldsymbol{f}$) donnant les tendances du modèle, et comparer les trajectoires obtenues pour une même condition initiale.\n",
     "* Changer le nombre de mode dans le modèle (voir l'entrée [6] du notebook) pour obtenir le [modèle de Charney & Strauss](https://journals.ametsoc.org/view/journals/atsc/37/6/1520-0469_1980_037_1157_fdimea_2_0_co_2.xml) vu au cours, et comparer la dynamique obtenue avec le modèle présenté ici.\n"
    ]
   },
