ajout du notebook 1

--- a/Cours PHYS-F-450 -- Notebook 0 - Introduction.ipynb
+++ b/Cours PHYS-F-450 -- Notebook 0 - Introduction.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Ce notebook est le premier d'une série d'exercice pour le cours [PHYS-F-450](https://www.ulb.be/fr/programme/phys-f450-1) donné à l'ULB.\n",
     "\n",
-    "Dans ce cours, vous apprendrez :\n",
+    "Dans ce notebook, vous apprendrez :\n",
     "\n",
     "1. **Comment installer le framework [qgs](https://github.com/Climdyn/qgs) pour la modélisation climatique et météorologique d'ordre réduit**\n",
     "2. **Comment exécuter le modèle**\n",
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# here we define the latitude to be 50 degrees and a predefined amplitude of the meridional temperature gradient\n",
+    "# nous définissons ici la latitude à 50 degrés et une amplitude prédéfinie du gradient de température méridien\n",
     "model_parameters.set_params({'phi0_npi': np.deg2rad(50.)/np.pi, 'hd':0.045})"
    ]
   },
@@ -352,7 +352,7 @@
    "source": [
     "%%time\n",
     "ic = np.random.rand(model_parameters.ndim)*0.1\n",
-    "integrator.integrate(0., transient_time, dt, ic=ic, write_steps=write_steps)  # write_steps=0 will only give us the last step\n",
+    "integrator.integrate(0., transient_time, dt, ic=ic, write_steps=write_steps)  # avec write_steps=0, l'intégrateur gardera seulement le point final en mémoire\n",
     "time, transient = integrator.get_trajectories()"
    ]
   },
